# orka-reasoning

./: .coverage  .coverage.marco-desktop.11324.XknjEWwx  .coverage.marco-desktop.12804.XFFlgMSx  .coverage.marco-desktop.20644.XRXNrEjx  .coverage.marco-desktop.21984.XGfzqcyx.c  .coverage.marco-desktop.2856.XaACOgpx  .coverage.marco-desktop.28636.XwKBvpwx  .coverage.marco-desktop.33020.XXkDvnax  .coverage.marco-desktop.39068.XVOvDfmx  .coverage.marco-desktop.51760.XhclEuex  .coverage.marco-desktop.63240.XKVtZEpx  .flake8  .gcloudignore  .gitignore  BACKUP_requirements_before_redis_fix.txt  BENCHMARK_V2_FIX_PLAN.md  BUG_FIXES_APPLIED.md  CHANGELOG.MD  CLAUDE.md  CLOUD_RUN_QUICKSTART.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COVERAGE_ANALYSIS.md  CRITICAL_FIXES_IMPLEMENTATION_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_FILES_INVENTORY.md  DEPLOYMENT_SUMMARY.md  DEVTO_ARTICLE.md  DOCUMENTATION_UPDATES_COMPLETE.md  Dockerfile  Dockerfile.cloudrun  FINAL_FIXES_SUMMARY.md  FIX_STRATEGY.md  GRAPHSCOUT_ANALYSIS.md  GRAPHSCOUT_EXECUTION_ANALYSIS.md  GRAPHSCOUT_FINAL_UNDERSTANDING.md  GRAPHSCOUT_FIXES_COMPLETE.md  GRAPHSCOUT_FIX_SUMMARY.md  GRAPHSCOUT_V1_IMPLEMENTATION_COMPLETE.md  (+111 more)
.cursor/plans/: pathexecutor-bug-0b340806.plan.md
.github/: copilot-instructions.md
.github/agents/: orka-agent.agent.md  orka-executor.agent.md
.github/workflows/: coverage_upload.yml  covrage.yml  docs.yml  hf-sync.yml  lint.yml  test.yml  tests.yml
UI/: README.md  index.html  package-lock.json  package.json
UI/public/: bad.yml  good.yml
UI/src/: App.tsx  main.tsx  styles.css  types.tsx
benchmark/: run_benchmark.py  test.jsonl
changelog/: session_31-01-2025.md
docs/: AGENT_NODE_TOOL_INDEX.md  AGENT_SCOPING.md  ARCHIVE_2025_01_31.md  BOOLEAN_SCORING_DESIGN.md  BOOLEAN_SCORING_GUIDE.md  BRAIN_SYSTEM_GUIDE.md  BRAIN_V2_SKILL_ARCHITECTURE.md  CODE_COMPLEXITY_REPORT.md  CODE_QUALITY_ASSESSMENT.md  COMPONENTS.md  CONFIGURATION.md  DEBUGGING.md  DEVELOPER_GUIDE_INTELLIGENT_QA_FLOW.md  EXECUTION_INVARIANTS_GUIDE.md  GIT_TIMELINE_PROJECT_EVOLUTION.md  GRAPHSCOUT_EXECUTION_MODES.md  GRAPH_SCOUT_AGENT.md  INTEGRATION_EXAMPLES.md  JSON_INPUTS.md  JSON_PARSER_GUIDE.md  KAFKA_SCHEMA_REGISTRY_SETUP.md  KNOWLEDGE_GRAPH.md  LOCAL_LLM_COST_CALCULATION.md  MEMORY_BACKENDS.md  MEMORY_SYSTEM_GUIDE.md  ONTOLOGY.md  OrKa_UI_Getting_Started_With_Images.md  PAPER_MEMORY_BINDING.md  PROJECT_EXCELLENCE_REVIEW.md  QUICK_REFERENCE.md  README_BACKENDS.md  SCHEMA_MANAGEMENT.md  SCORING_ARCHITECTURE.md  STREAMING_GUIDE.md  STRUCTURED_OUTPUT_GUIDE.md  TEMPLATE_FILTERS.md  TEMPLATE_RENDERING_FIX.md  TESTING.md  TESTING_IMPROVEMENTS_ROADMAP.md  TEST_COVERAGE_ENHANCEMENT_STRATEGY.md  (+34 more)
docs/agents/: binary.md  local-llm.md  openai-answer.md  openai-binary.md  openai-classification.md  plan-validator.md  (+1 more)
docs/tools/: rag.md  (+1 more)
examples/: README.md  README_CLOUD_DEMO.md  basic_memory.yml  boolean_scoring_demo.yml  boolean_scoring_loop_example.yml  brain_skill_transfer_demo.py  brain_skill_transfer_workflow.yml  brain_v2_graphscout_inputs.yml  brain_v2_graphscout_integration.yml  brain_v2_recipe_transfer.yml  brain_v2_recipe_transfer_inputs.yml  capabilities_example.yml  cognitive_loop_scoring_example.yml  cognitive_society_loop.yml  cognitive_society_minimal_loop.yml  cognitive_society_simple.yml  cognitive_society_with_memory.yml  complex_flow.yml  comprehensive_research_analysis.yml  conditional_search_fork_join.yaml  cot_multi_perspective.yml  debug_orchestrator.yml  enhanced_memory_presets_demo.yml  enhanced_memory_validation_example.yml  episodic_brain_workflow.yml  example.yml  failover.yml  failover_search_and_validate.yml  fork_join.yaml  fork_join.yml  graph_scout_basic.yml  graph_scout_dynamic.yml  graph_scout_example.yml  graph_scout_validated_loop.yml  graph_scout_with_plan_validator_loop.yml  graphscout_path_executor.yml  graphscout_validate_then_execute.yml  graphscout_validated_execution.yml  iterative_learning_demo.yml  kafka_example.yml  (+46 more)
orka/: __init__.py  contracts.py  fork_group_manager.py  loader.py  memory_logger.py  orchestrator.py  orchestrator_error_wrapper.py  orka_cli.py  orka_start.py  registry.py  requirements-minimal.txt  requirements-ml.txt  requirements.txt  response_builder.py  server.py  start_kafka.py  start_redis.py  start_redis_only.py  tui_interface.py
scripts/: README.md  build_docs.bat  build_docs.sh  check_graphscout_configs.py  check_indexes.py  check_redis_direct.py  coverage_analyze.py  data_consistency.py  debug_memory.py  debug_memory_classification.py  debug_redis_kafka.py  delete_memory.py  dump_index_info.py  dump_memory_keys.py  find_join_memory.py  find_memory_hits.py  maintain_docs.py  migrate_to_redisstack.py  migrate_to_schemas.py  run_all_examples.py  run_benchmark.py  search_index.py  test_data_consistency.py  test_kafka.py  test_memory_stats.py  test_parallel_memory.py  test_schema.py  test_schema_registry.py  test_ttl_demo.py  test_vector_search.py  test_with_cleanup.py  update_headers.py
test/: conftest.py  dummy.yml  fake_redis.py  mark_deprecated_tests.py  test_agent_factory_decay.py  test_agents.py  test_agents_basic.py  test_all_domains.py  test_base_agent.py  test_concurrency.py  test_coverage_improvements.py  test_domain_agents.py  test_domain_cli_orchestration.py  test_domain_memory.py  test_domain_nodes.py  test_enhanced_memory_reader.py  test_extra_coverage.py  test_failover_node_comprehensive.py  test_fork_group_manager.py  test_fork_join_nodes.py  test_integration.py  test_kafka_hybrid_backend.py  test_kafka_memory.py  test_llm_agents.py  test_local_cost_calculator_simple.py  test_local_llm_agent.py  test_memory.py  test_memory_agent.py  test_memory_components.py  test_memory_compressor.py  test_memory_decay.py  test_memory_file_operations.py  test_memory_logger.py  test_memory_schema_manager.py  test_memory_serialization.py  test_nodes.py  test_orchestrator.py  test_orchestrator_agent_factory.py  test_orchestrator_error_handling.py  test_orchestrator_execution_engine.py  (+20 more)
tests/: __init__.py  conftest.py  fake_redis.py  test_graph_scout_agent.py
(+2940 files in other folders)
