[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orka-reasoning"
version = "0.7.6"
description = "Modular agent orchestrator for reasoning pipelines"
authors = [
  { name = "Marco Somma", email = "marcosomma.work@gmail.com" }
]
readme = "README.md"
license = { text = "Apache 2.0" }
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
  # Core Dependencies
  "redis[async]>=5.0.0",
  "redis-om>=0.2.1",
  "pyyaml>=6.0.2",
  "python-dotenv>=0.19.0",
  
  # AI and ML
  "openai>=1.0.0",
  "litellm>=1.0.0",
  "sentence-transformers>=2.2.0",
  "numpy>=1.21.0",
  
  # Search and APIs
  "duckduckgo-search>=3.0.0",
  "google-api-python-client>=2.0.0",
  
  # Web Framework
  "fastapi>=0.68.0",
  "uvicorn>=0.15.0",
  "pydantic>=1.8.0",
  "httpx>=0.24.0",
  "jinja2>=3.0.0",
  "async-timeout>=4.0.0",
  
  # UI Components
  "rich>=13.0.0",
  "textual>=0.40.0"
]

[project.optional-dependencies]
# Development Tools
dev = [
  # Testing
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.0.0",
  "coverage>=7.0.0",
  "fakeredis>=2.0.0",
  
  # Linting and Formatting
  "ruff>=0.1.0",
  
  # Documentation
  "sphinx>=7.0.0",
  "sphinx-rtd-theme>=1.0.0"
]

# Schema Registry and Kafka Support
schema = [
  "confluent-kafka[avro,protobuf,schema-registry]>=2.3.0",
  "avro-python3>=1.10.2",
  "fastavro>=1.9.0",
  "protobuf>=4.25.0",
  "jsonschema>=4.20.0",
  "kafka-python>=2.0.2"
]

# Production Dependencies
prod = [
  "gunicorn>=21.0.0",
  "supervisor>=4.2.0"
]

# All Dependencies (for development with all features)
all = [
  "orka-reasoning[dev,schema,prod]"
]

[project.urls]
Homepage = "https://orkacore.com"
Documentation = "https://docs.orkacore.com"
Repository = "https://github.com/marcosomma/orka-reasoning"

[project.scripts]
orka = "orka.orka_cli:cli_main"
orka-start = "orka.orka_start:cli_main"
orka-redis = "orka.start_redis_only:cli_main"
orka-kafka = "orka.start_kafka:cli_main"

[project.entry-points."orka.agents"]
openai-builder = "orka.agents.llm_agents:OpenAIAnswerBuilder"
rag-agent = "orka.agents.rag_agent:RAGAgent"
local-llm = "orka.agents.local_llm_agents:LocalLLMAgent"
binary = "orka.agents.agents:BinaryAgent"
classification = "orka.agents.agents:ClassificationAgent"
validate-and-structure = "orka.agents.validation_and_structuring_agent:ValidationAndStructuringAgent"

[project.entry-points."orka.nodes"]
memory-writer = "orka.nodes.memory_writer_node:MemoryWriterNode"
memory-reader = "orka.nodes.memory_reader_node:MemoryReaderNode"
rag-node = "orka.nodes.rag_node:RAGNode"
fork-node = "orka.nodes.fork_node:ForkNode"
join-node = "orka.nodes.join_node:JoinNode"
failover-node = "orka.nodes.failover_node:FailoverNode"
router-node = "orka.nodes.router_node:RouterNode"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
exclude = ["test*", "tests*"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["test"]
python_files = "test_*.py"
python_functions = "test_*"
pythonpath = ["."]
addopts = "--cov=orka --cov-report=xml:coverage.xml --cov-report=term --no-cov-on-fail"
filterwarnings = [
    "ignore::RuntimeWarning:unittest.mock",
    "ignore::DeprecationWarning:datetime",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "performance: marks tests as performance tests",
    "redis: marks tests that require Redis",
    "llm: marks tests that require LLM APIs",
    "asyncio: marks tests as async",
]

[tool.coverage.run]
source = ["orka"]
branch = true
parallel = true
omit = [
    "*/site-packages/*",
    "*/tests/*",
    "test/*",
    "setup.py",
    "orka/start_kafka.py",
    "orka/start_redis_only.py",
    "orka/orka_start.py",
    "orka/docker/*",
    "orka/tui/*",
    "orka/startup/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
    "except ImportError:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
    "return NotImplemented",
]
fail_under = 80

[tool.ruff]
line-length = 100
target-version = "py311"
fix = true
unsafe-fixes = false

select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "PL",  # pylint
    "RUF", # Ruff-specific rules
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "ARG", # flake8-unused-arguments
    "PIE", # flake8-pie
    "PT",  # flake8-pytest-style
    "ERA", # eradicate
    "SIM", # flake8-simplify
    "T20", # flake8-print
    "YTT", # flake8-2020
    "ANN", # flake8-annotations
    "S",   # flake8-bandit
    "BLE", # flake8-blind-except
    "FBT", # flake8-boolean-trap
    "COM", # flake8-commas
    "DTZ", # flake8-datetimez
    "T10", # flake8-debugger
    "ISC", # flake8-implicit-str-concat
    "G",   # flake8-logging-format
    "PTH", # flake8-use-pathlib
    "PD",  # pandas-vet
    "PGH", # pygrep-hooks
    "PLR", # pylint rules
    "TRY", # tryceratops
]

ignore = [
    "ANN101", # missing-self-type
    "ANN102", # missing-type-cls
    "ANN401", # dynamically-typed-expression
    "D203",   # no-blank-line-before-class
    "D212",   # multi-line-summary-first-line
    "E501",   # line-too-long
    "FBT001", # boolean-positional-value-in-call
    "FBT002", # boolean-trap-in-default-argument
    "FBT003", # boolean-trap-in-function-argument
    "PLR0913", # too-many-arguments
    "PLR2004", # magic-value-comparison
    "RUF012", # mutable-class-default
]
